	  using filters and sorting instead.
	* Load prefs from setup file in the requested folder, and secondarily (if an 
	  option doesn't exist here), check in the user config folder.
	* Remove search functionality - "Find in Files" is already available in 
	  SciTE.
	* Add option start_scite to start scite immediately on sciteproj start
	* Require LUA for the config file loading

0.7.05
	* Fix menu translations context to actually work
	* Move gui_callbacks to own sourcefiles
	* Move menu stuff to a header
	* Update manpage

0.7.04
	* Remove translation context from a string where it isn't required (and 
	  causes build failure)

0.7.03
	* Add context to menu translatable strings
	* Updated build instructions with gettext info
	* Removed printing non-informational error numbers

0.7.02
	* Really fix the dependency generation

0.7.01
	* Add LIB_CFLAGS to dependency generation in Makefile

0.7.00
	* Make it possible to hide the statusbar to save screen space
	* Made SciteProj translatable using gettext
	* Complete GTK3 migration
	* Add linking on gthread-2.0

0.6.06
	* Update makefile to nicely use obj folder again

0.6.05
	* Make build use INSTALL_PREFIX flag to simplify packaging

0.6.04
	* Move libraries to after objects in linker call, allowing to build 
	  with --as-needed
	* Whitespace fixes
	
0.6.03
	* More makefile fixes to support both prefix and DESTDIR

0.6.02
	* Fixes to the makefile, fixing the depends, fixed flags order

0.6.01
	* Update build flags to include standard system build flags
	* install sciteproj icon to correct place

0.6.00
	* Use g_get_user_config_dir to get where to put the config file, if it 
	  doesn't exist, copy the configfile from ~/.sciteproj
	* Make code GTK3 compatible
	* Remove Cmake stuff and use a basic Makefile instead
	* Update makefile to use GTK3 by default (add GTK2=1 to make command to use 
	  GTK2 during compilation)
	
0.5.11
	* Added icons for lua and java files
	* Fix minor warning (-Wformat-security)

0.5.10