@@ -11,6 +11,7 @@ ChangeLog:
 	  SciTE.
 	* Add option start_scite to start scite immediately on sciteproj start
 	* Require LUA for the config file loading
+	* Remove some functions for deleting files and creating folders
 
 0.7.05
 	* Fix menu translations context to actually work
